--- a/crawler-deployment.yaml
+++ b/crawler-deployment.yaml
@@ -14,9 +14,62 @@ spec:
       labels:
         app: synergychat-crawler
     spec:
+      volumes:
+        - name: cache-volume
+          emptyDir: {}
       containers:
-        - name: synergychat-crawler
+        # Primer contenedor (puerto 8080)
+        - name: synergychat-crawler-1
           image: bootdotdev/synergychat-crawler:latest
           envFrom:
             - configMapRef:
                 name: synergychat-crawler-configmap
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
+
+        # Segundo contenedor (puerto 8081)
+        - name: synergychat-crawler-2
+          image: bootdotdev/synergychat-crawler:latest
+          env:
+            - name: CRAWLER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_PORT_2
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
+            - name: CRAWLER_KEYWORDS
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_KEYWORDS
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
+
+        # Tercer contenedor (puerto 8082)
+        - name: synergychat-crawler-3
+          image: bootdotdev/synergychat-crawler:latest
+          env:
+            - name: CRAWLER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_PORT_3
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
+            - name: CRAWLER_KEYWORDS
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_KEYWORDS
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
