--- a/crawler-configmap.yaml
+++ b/crawler-configmap.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: synergychat-crawler-configmap
+  namespace: crawler
 data:
   CRAWLER_DB_PATH: "/cache/db"
   CRAWLER_PORT: "8080"
